0221 과목평가준비

--- a/0214/0214라이브.md
+++ b/0214/0214라이브.md
@@ -58,7 +58,7 @@
     # j 열의 좌표
     
     for j in range(m):
-        for i in ragne(n):
+        for i in range(n):
             Array[i][j] # 필요한 연산 수행
     ```
 
